squash bugs and sorting the greensock smoothscrooling

--- a/css/main.css
+++ b/css/main.css
@@ -1414,7 +1414,6 @@ hr
 /* Gallery frame */
 .galleryFrame
 {
-	background-color: #c1c1c1;
 	padding: 2px;
 	text-align: center;
 	margin: 5px;
